# Splendor-duel

./: CMakeLists.txt  README.md  SplendorUML.puml  SplendorUML_v2.puml  base.db  carteJoaillerie.cpp  carteJoaillerie.h  jeu.cpp  jeu.h  main.cpp  pioche.cpp  pioche.h
affichage/: affichage_carte.cpp  affichage_carte.h
include/: IA.cpp  affichage_joueur.h  carte.h  carteJoaillerie.h  carteNoble.h  couleur.h  gemme.h  humain.cpp  jeton.h  jeton_tmp.h  jeu.h  joueur.h  obligatoire.h  optionnelle.h  or.h  pioche.h  plateau.h  pouvoir.h  privilege.h  query.h  test_affichage_joueur.h
src/: IA.cpp  affichage_joueur.cpp  carte.cpp  carteJoaillerie.cpp  carteNoble.cpp  database_manager.cpp  gemme.cpp  humain.cpp  jeton.cpp  jeu.cpp  joueur.cpp  obligatoire.cpp  optionnelle.cpp  or.cpp  pioche.cpp  plateau.cpp  privilege.cpp  query.cpp  test_affichage_jeu.cpp
